--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     },
     "autoload": {
         "psr-4": {
-            "CakeSuit\\Option\\": "src"
+            "Cakesuit\\Option\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "CakeSuit\\Option\\Test\\": "tests",
+            "Cakesuit\\Option\\Test\\": "tests",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     }
